<resources>
    <string name="app_name">GuideUIO</string>
    <string name="power_by">GuideUIO</string>
    <string name="slogan_name">Disfruta de la ciudad de Quito</string>
    <string name="logo_name">Búsqueda</string>

    <!--     General Menu names     -->
    <string name="home">PRINCIPAL</string>
    <string name="search">BÚSQUEDA</string>
    <string name="all_places">LUGARES PARA VISITAR</string>
    <string name="all_categories">TODAS LAS CATEGORIAS</string>
    <string name="add_missing_place">AÑADIR LUGAR</string>
    <string name="profile">Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="login">Iniciar Sesión</string>
    <string name="share">Compartir</string>
    <string name="rate_us">Valorar</string>
    <string name="e_commerce">Shopping E-commerce </string>
    <string name="script">Mostrar Contenido </string>
    <string name="food_delivery">Food Delivery </string>
    <string name="taxi">Taxi </string>

    <!--     All Categories Menu names     -->
    <string name="expand_all">Ver más</string>
    <string name="car_rent">Parques</string>
    <string name="all_shops">All Shops</string>

    <!--  Titles and Descriptions  -->
    <string name="featured_locations">Ubiaciones destacadas</string>
    <string name="featured_locations_description">Lo más destacado de la ciudad</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categorias</string>
    <string name="view_all">Ver Todo</string>
    <string name="search_text">Buscando...</string>

    <!--  Categories  -->
    <string name="hotels">Hoteles</string>
    <string name="restaurants">Restaurantes</string>
    <string name="shops">Recomendaciones</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">Lugares Famosos</string>
    <string name="hospitals">Hospitals</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--  General Strings  -->
    <string name="sign_up">Sign Up</string>
    <string name="heading">Enjoy\nTraveling</string>
    <string name="tag_line">Provider the best location</string>
    <string name="create_account">Crear\nCuenta</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Recordar Usuario</string>
    <string name="forget_password">Olvidé mi contraseña</string>

    <!--  Field Strings  -->
    <string name="enter_first_name">Nombre</string>
    <string name="enter_last_name">Apellido</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Teléfono</string>
    <string name="enter_password">Contraseña</string>
    <string name="title_activity_all_places">AllPlacesActivity</string>

    <string name="hello_world">Mensaje</string>
    <string name="personal">  Contacto</string>
</resources>