<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_dashboard_icon"/>
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/menu_categories_icon"/>
        <item
            android:id="@+id/nav_all_places"
            android:title="@string/all_places"
            android:icon="@drawable/menu_place_icon"/>
    </group>

    <item android:title="Perfil">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/menu_login_icon"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/menu_profile_icon"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:visible="true"
                    android:icon="@drawable/menu_logout_icon"/>
            </group>

        </menu>
    </item>

    <item android:title="Categorias">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants"
                    android:icon="@drawable/icon_1"/>
                <item
                    android:id="@+id/nav_car_rent"
                    android:title="@string/car_rent"
                    android:icon="@drawable/icon_6"/>
                <item
                    android:id="@+id/nav_hotel"
                    android:title="@string/hotels"
                    android:icon="@drawable/icon_3"/>
                <item
                    android:id="@+id/nav_education"
                    android:title="@string/education"
                    android:icon="@drawable/icon_4"/>
                <item
                    android:id="@+id/nav_shop"
                    android:title="@string/shops"
                    android:icon="@drawable/icon_5"/>
            </group>

        </menu>
    </item>

    <item android:title="Mostrar">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_script"
                    android:title="@string/script"
                    android:icon="@drawable/icon_script"/>
            </group>

        </menu>
    </item>

</menu>