<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo"
    android:padding="30dp"
    tools:context=".LoginSignup.StartUpScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:text="@string/heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/brandon_grotesque_light"
            android:text="@string/tag_line"
            android:textAlignment="center"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:onClick="callLoginScreen"
                android:textColor="@color/white"
                android:visibility="visible"
                android:transitionName="transition_login"
                tools:ignore="ButtonStyle"
                app:backgroundTint="#0D1D77"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:onClick="callSignupScreen"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle"
                android:visibility="visible"
                android:transitionName="transition_signup"
                app:backgroundTint="#0D1D77"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_out_btn"
            android:layout_width="211dp"
            android:layout_height="50dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:text="@string/logout"
            android:visibility="visible"
            app:backgroundTint="#0D1D77"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>